[project]
name = "visualisation-demo"
version = "0.1.0"
description = "Tutorial for SIADS 521 assignment on building interactive dashboards using HoloViews"
authors = [
    {name = "Martin Ho"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "panel (>=1.6.1,<2.0.0)",
    "watchfiles (>=1.0.4,<2.0.0)",
    "hvplot (>=0.11.2,<0.12.0)",
    "jupyter-bokeh (>=4.0.5,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
